Version 0.1.14:
	New features:
	- Matching brace highlighting and go to matching brace function.

	Bug fixes:
	- Try to load the correct config file on errors in the configuration file.
	- Use -V as option for version information, rather than -v.

Version 0.1.13:
	New features:
	- Added an option to allow specification of the encoding on the command
	  line, or ask for encoding on start-up.
	- Handle BOMs on loading of UTF-8 files.

	Bug fixes:
	- Properly handle the start of a file such that BOMs are correctly
	  interpreted.

Version 0.1.12:
	Bug fixes:
	- Use correct name for UTF-8 with BOM converter.

Version 0.1.11:
	New features:
	- An option has been added to show tabs.
	- Follow libt3widget API change.

	Bug fixes:
	- Fix a segmentation fault that would occur on using the mouse in the
	  Input Handling dialog.
	- Added "Indent aware home key" configuration option.

Version 0.1.10:
	New features:
	- Use the new XDG Base Directory Specification support functions in
	  libt3config to use configuration file in the correct directory.
	- Use the new libt3highlight language-detection features.

Version 0.1.9:
	New features:
	- Follow libt3highlight API changes for libt3highlight 0.2.0.

Version 0.1.8:
	New features:
	- Follow libt3widget API changes for libt3widget 0.1.7.

Version 0.1.7:
	Bug fixes:
	- Removed reference to pcre_version, which was inadvertently left in code.

Version 0.1.6:
	New features:
	- Optional saving of backup files.

	Miscelaneous changes:
	- Use libunistring instead of libt3unicode.

	Bug fixes:
	- Fix highlighting for single line files
	- Fix crash on loading files from command line when load fails on the first
	  of those files.

Version 0.1.5:
	Bug fixes:
	- Choosing a new highlighting language would cause a segmentation fault.

Version 0.1.4:
	New features:
	- Added a "strip trailing spaces on save" option, and a "strip trailing
	  spaces" entry in the Tools menu.
	- Autocomplete from existing text.

Version 0.1.3:
	Bug fixes: